--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@nuxt/vue-app": "^2.11.0",
     "@types/webpack": "^4.41.6",
+    "axios": "^0.19.2",
     "nuxt-ts": "^2.8.1",
     "vue-meta": "^2.3.2",
     "vue-property-decorator": "^8.4.0"
