--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/webpack": "^4.41.6",
     "axios": "^0.19.2",
     "nuxt-ts": "^2.8.1",
+    "ts-node": "^8.6.2",
     "vue-meta": "^2.3.2",
     "vue-property-decorator": "^8.4.0"
   },
