--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "@nuxt/vue-app": "^2.11.0",
+    "@nuxtjs/markdownit": "^1.2.9",
     "@types/webpack": "^4.41.6",
     "axios": "^0.19.2",
     "nuxt-ts": "^2.8.1",
