--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@nuxt/typescript": "^2.8.1",
+    "processmd": "^4.5.0",
     "tslint-config-standard": "^9.0.0"
   },
   "scripts": {
@@ -22,7 +23,8 @@
     "build": "nuxt-ts build",
     "start": "nuxt-ts start",
     "generate": "nuxt-ts generate",
-    "lint": "tslint --project"
+    "lint": "tslint --project",
+    "md": "processmd static/md/tech/*.{yml,md} --outputDir output > static/tech.json"
   },
   "repository": {
     "type": "git",
