--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@nuxtjs/markdownit": "^1.2.9",
     "@types/webpack": "^4.41.6",
     "axios": "^0.19.2",
+    "contentful": "^7.14.4",
     "nuxt-ts": "^2.8.1",
     "ts-node": "^8.6.2",
     "vue-meta": "^2.3.2",
