--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "devDependencies": {
     "@nuxt/typescript": "^2.8.1",
     "processmd": "^4.5.0",
-    "tslint-config-standard": "^9.0.0"
+    "tslint-config-standard": "^9.0.0",
+    "sass-loader": "^8.0.2"
   },
   "scripts": {
     "dev": "nuxt-ts",
