--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^8.2.0",
     "node-sass": "^4.14.1",
     "nuxt-ts": "^2.8.1",
+    "pixi.js": "^5.2.4",
     "ts-node": "^8.6.2",
     "vue-meta": "^2.3.2",
     "vue-property-decorator": "^8.4.0"
